# kimchi-termux

./: .envrc  .gitignore  AGENTS.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  TODO.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: CODEOWNERS  pull_request_template.md
benchmark/terminal-bench-2/: .gitignore  README.md  pyproject.toml
benchmark/terminal-bench-2/config/: retry.yaml
benchmark/terminal-bench-2/docs/: ferment-terminal-bench-analysis.md
benchmark/terminal-bench-2/scripts/: analyze-ferment-bench.py  run-claude-code-kimchi.sh  run-gsd-kimchi.sh  run-local.sh  run-opencode-kimchi.sh  run-release.sh
benchmark/terminal-bench-2/src/kimchi_agent/: __init__.py  agent.py  agent_test.py  claude_code_kimchi.py  claude_code_kimchi_test.py  config.py  gateway.py  gsd_kimchi.py  gsd_kimchi_test.py  messages.py  opencode_kimchi.py  opencode_kimchi_test.py  release.py  retry_config_test.py
docs/: AUDIT_2026-07-08.md  TERMUX_LAYOUT.md  agents.md  bash-tool-guard.md  expected-execution-scenarios.md  ferment-storage-schema.md  ferment.md  hooks.md  teleport.md
extensions/: active-tools.ts
patches/: @earendil-works__pi-ai@0.78.1.patch  @earendil-works__pi-ai@0.79.10.patch  @earendil-works__pi-coding-agent@0.78.1.patch  @earendil-works__pi-coding-agent@0.79.10.patch  @earendil-works__pi-tui.patch  @earendil-works__pi-tui@0.79.10.patch  playwright-core@1.59.1.patch  read-limit-default.patch
scripts/: build-binary.js  build-bundle.mjs  build-proxy-helper.js  copy-resources.js  (+13 more)
(+836 files in other folders)
